--- a/octoprint_cyborgtheme/static/css/overrides.css
+++ b/octoprint_cyborgtheme/static/css/overrides.css
@@ -134,6 +134,16 @@ table td.settings_plugin_announcements_channels_actions a.disabled, table th.set
 .navbar {
     min-width: 960px;
 }
+/*fix navbar text being too spaced out*/
+
+.navbar .nav {
+	font-size: 12px;
+    margin: 0 0 0 0;
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+}
 /*obvious general stuff, fonts, font sizes*/
 body {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
